--- a/wp-content/themes/screenr/assets/css/lightgallery.css
+++ b/wp-content/themes/screenr/assets/css/lightgallery.css
@@ -3,8 +3,8 @@
 * Copyright (c) 2016 Sachin N; Licensed Apache 2.0 */
 @font-face {
   font-family: 'lg';
-  src: url("http://thanhsang2168.github.io/mywordpress/wp-content/themes/screenr/assets/css/fonts/lg.eot?n1z373");
-  src: url("http://thanhsang2168.github.io/mywordpress/wp-content/themes/screenr/assets/css/fonts/lg.eot#iefixn1z373") format("embedded-opentype"), url("http://thanhsang2168.github.io/mywordpress/wp-content/themes/screenr/assets/css/fonts/lg.woff?n1z373") format("woff"), url("http://thanhsang2168.github.io/mywordpress/wp-content/themes/screenr/assets/css/fonts/lg.ttf?n1z373") format("truetype"), url("http://thanhsang2168.github.io/mywordpress/wp-content/themes/screenr/assets/css/fonts/lg.svg?n1z373#lg") format("svg");
+  src: url("https://thanhsang2168.github.io/mywordpress/wp-content/themes/screenr/assets/css/fonts/lg.eot?n1z373");
+  src: url("https://thanhsang2168.github.io/mywordpress/wp-content/themes/screenr/assets/css/fonts/lg.eot#iefixn1z373") format("embedded-opentype"), url("https://thanhsang2168.github.io/mywordpress/wp-content/themes/screenr/assets/css/fonts/lg.woff?n1z373") format("woff"), url("https://thanhsang2168.github.io/mywordpress/wp-content/themes/screenr/assets/css/fonts/lg.ttf?n1z373") format("truetype"), url("https://thanhsang2168.github.io/mywordpress/wp-content/themes/screenr/assets/css/fonts/lg.svg?n1z373#lg") format("svg");
   font-weight: normal;
   font-style: normal;
 }
@@ -757,7 +757,7 @@ body:not(.lg-from-hash) .lg-outer.lg-start-zoom .lg-item.lg-complete .lg-object 
   white-space: nowrap;
 }
 .lg-outer .lg-item {
-  background: url("http://thanhsang2168.github.io/mywordpress/wp-content/themes/screenr/assets/images/loading.gif") no-repeat scroll center center transparent;
+  background: url("https://thanhsang2168.github.io/mywordpress/wp-content/themes/screenr/assets/images/loading.gif") no-repeat scroll center center transparent;
   display: none !important;
 }
 .lg-outer.lg-css3 .lg-prev-slide, .lg-outer.lg-css3 .lg-current, .lg-outer.lg-css3 .lg-next-slide {
